--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -22,6 +22,7 @@
             max-width: 70% !important;
             margin: 0 !important;
             height: 100%;
+            text-align: left;
             &.zIndex99999{
                 z-index: 99999;
             }
