--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -163,7 +163,7 @@
                         <div class="col-2 date">{{page.createdOn | dateFormatPipe}}</div>
                         <div class="col-2 actions">
                           <img src="assets/images/return.svg">
-                          <img src="assets/images/trashIcon.svg" (click)="deletePages(i,page ,$event)">
+                          <img src="assets/images/trashIcon.svg" (click)="deletePages('pages',page ,$event)">
                         </div>
                       </div>
                     </a>
