--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -10,7 +10,7 @@
                 <div class="tab-sec d-flex">
                     <div class="tab_title" (click)="selectTab('draft')" [ngClass]="{'active': (selectedtab === 'draft')}">Drafts<span class="">({{faqSelectionObj.stats.draft || 0}})</span></div>
                     <div class="tab_title" (click)="selectTab('in_review')" [ngClass]="{'active': (selectedtab === 'in_review')}">In-review<span class="">({{faqSelectionObj.stats.in_review || 0}})</span></div>
-                    <div class="tab_title" (click)="selectTab('approve')" [ngClass]="{'active': (selectedtab === 'approve')}">Approved<span class="">({{faqSelectionObj.stats.approve || 0}})</span></div>
+                    <div class="tab_title" (click)="selectTab('approve')" [ngClass]="{'active': (selectedtab === 'approve')}">Approved<span class="">({{faqSelectionObj.stats.approved || 0}})</span></div>
                 </div>
             </div>
             <div class="col-4 p-0 right-sec">
@@ -101,8 +101,9 @@
                         </div>
                         <div class="footer-btns" *ngIf="faqSelectionObj.selectedCount">
                             <button class="kr-sg-button-primary btn_lg" *ngIf="selectedtab === 'in_review'" (click)="bulkUpdate('update','approve')">Approve</button>
-                            <button class="kr-sg-button-primary btn_lg" *ngIf="selectedtab === 'draft'" (click)="bulkUpdate('update','in_review')">Send for Review</button>
-                            <button class="kr-sg-button-secondary btn_lg" *ngIf="selectedtab === 'draft'" (click)="deleteQuestion('qstnFAQ',singleSelectedFaq,{})">Delete</button>
+                            <button class="kr-sg-button-primary btn_lg" *ngIf="(selectedtab === 'draft')  || (selectedtab === 'approve')" (click)="bulkUpdate('update','in_review')">Send for Review</button>
+                            <button class="kr-sg-button-primary btn_lg" *ngIf="(selectedtab === 'in_review') || (selectedtab === 'approve')" (click)="bulkUpdate('update','draft')">Needs Rework</button>
+                            <button class="kr-sg-button-secondary btn_lg" *ngIf="(selectedtab === 'draft') || (selectedtab === 'approve')" (click)="deleteQuestion('qstnFAQ',singleSelectedFaq,{})">Delete</button>
                         </div>
                     </div>
                 </div>
@@ -177,7 +178,7 @@
                         </div>                    
                     </div>
                     <div class="header-info-que with-info" *ngIf="selectedFaq && selectedFaq.state === 'approve'">
-                        <div class="col-2 p-0" [ngClass]="{'col-4': !selectedFaq.reviewedBy}">
+                        <div class="col-2 p-0" [ngClass]="{'col-3': !selectedFaq.reviewedBy}">
                             <div class="heading">Source</div>
                             <div class="info-title">{{selectedFaq.source | titlecase}}</div>
                         </div>
@@ -185,7 +186,7 @@
                             <div class="heading">Type</div>
                             <div class="info-title">{{selectedFaq.source | titlecase}}</div>
                         </div>
-                        <div class="col-2 p-0" [ngClass]="{'col-4': !selectedFaq.reviewedBy}">
+                        <div class="col-2 p-0" [ngClass]="{'col-3': !selectedFaq.reviewedBy}">
                             <div class="heading">Edited by</div>
                             <div class="info-title">{{selectedFaq.createdBy}}</div>
                         </div>
@@ -223,14 +224,14 @@
                                     </div>                        
                                     <div class="added-answer" [innerHtml]='selectedFaq.answer'></div>
                                 </div>
-                                <div class="appearences-info row">
+                                <div class="appearences-info row" *ngIf="selectedFaq && selectedFaq.feedback">
                                     <div class="col-4 p-0">
                                         <span class="source">Appearances:</span>
                                         <span class="count">{{selectedFaq.feedback.expand}}</span>
                                     </div>
                                     <div class="col-3 p-0">
                                         <span class="source">Clicks:</span>
-                                        <span class="count">{{selectedFaq.feedback.ckick}}</span>
+                                        <span class="count">{{selectedFaq.feedback.click}}</span>
                                     </div>
                                     <div class="col-2 p-0">
                                         <span class="source"><img src="assets/icons/like.svg"></span>
