--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -283,7 +283,8 @@ input[type=text]:focus {
          border: 1px solid rgba(0,0,0,.125) !important;
      }
      .btn-mt{
-        margin-top: 50%;
+        margin-top: 25px;
+        // margin-top: 50%;
         background: #dcdcdc;
      }
      .list-group{
