added icon for synonyms

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -46,7 +46,7 @@
 		</div>
 		<div mat-button class="mat-button" [routerLink]="['/synonyms']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>			
 			<span class="inlineIconBox">
-				<!-- <img src="assets/icons/sidemenu/botactions.svg">				 -->
+				<img src="assets/icons/sidemenu/synonyms.svg" class="callHistory">				
 			</span>
 			<span class="linkTitle">Synonyms</span>
 		</div>
