edit correction -  sunil

--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -100,7 +100,7 @@
                                          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                                          [matChipInputAddOnBlur]="addOnBlur"
                                          (matChipInputTokenEnd)="addList($event,i)" #suggestedInput>
-                                         <!-- <button type="button" class="btn btn-light" (click)="addSynonymsAddedName(syn,i)">+</button> -->
+                                         <button type="button" class="btn btn-light" (click)="addSynonymsAddedName(syn,i)">+</button>
                                 </mat-chip-list>
                               </mat-form-field>
                         </div>
